--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout РЕПОЗИТОРИЯ FRONTEND
+      # 1. Checkout devstack (текущий репо)
+      - name: Checkout devstack repo
+        uses: actions/checkout@v3
+
+      # 2. Checkout frontend repo
       - name: Checkout frontend repo
         uses: actions/checkout@v3
         with:
@@ -18,27 +22,27 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           path: frontend
 
-      # 2. Логин в GHCR
+      # 3. Логин в GHCR через PAT
       - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_PAT }}
 
-      # 3. Сборка Docker-образа из frontend/
+      # 4. Сборка Docker-образа фронта
       - name: Build Docker image
         run: |
           docker build \
             -t ghcr.io/marchitecht/frontend:latest \
             frontend
 
-      # 4. Push образа
+      # 5. Push Docker-образа в GHCR
       - name: Push Docker image
         run: |
           docker push ghcr.io/marchitecht/frontend:latest
 
-      # 5. Деплой на сервер
+      # 6. Деплой на сервер через SSH
       - name: Deploy to server
         uses: appleboy/ssh-action@v0.1.6
         with:
