add envs and login for pull image

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           path: frontend
 
-      # 3. Логин в GHCR через PAT
+      # 3. Логин в GHCR через PAT для сборки локально
       - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
@@ -42,7 +42,7 @@ jobs:
         run: |
           docker push ghcr.io/marchitecht/frontend:latest
 
-      # 6. Деплой на сервер через SSH
+      # 6. Деплой на сервер через SSH с логином в GHCR
       - name: Deploy to server
         uses: appleboy/ssh-action@v0.1.6
         with:
@@ -52,5 +52,7 @@ jobs:
           port: 22
           script: |
             cd /root/devstack
+            # Логинимся в GHCR на сервере для pull приватного образа
+            echo $GHCR_PAT | docker login ghcr.io -u $GHCR_USERNAME --password-stdin
             docker-compose pull frontend
             docker-compose up -d frontend
