change workflow deploy.yml

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,11 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout devstack repo
+      # 1. Клонируем devstack
       - name: Checkout devstack
         uses: actions/checkout@v3
 
-      # 2. Checkout frontend repo
+      # 2. Клонируем frontend в папку frontend
       - name: Checkout frontend
         uses: actions/checkout@v3
         with:
@@ -22,7 +22,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           path: frontend
 
-      # 3. Логин в GHCR для сборки локально
+      # 3. Логинимся в GHCR для сборки и пуша
       - name: Log in to GHCR
         uses: docker/login-action@v2
         with:
@@ -30,17 +30,17 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GHCR_PAT }}
 
-      # 4. Сборка Docker-образа фронта
+      # 4. Строим Docker образ фронта
       - name: Build Docker image
         run: |
           docker build -t ghcr.io/marchitecht/frontend:latest frontend
 
-      # 5. Push Docker-образа в GHCR
+      # 5. Пушим Docker образ в GHCR
       - name: Push Docker image
         run: |
           docker push ghcr.io/marchitecht/frontend:latest
 
-      # 6. Деплой на сервер через SSH с логином в GHCR
+      # 6. Деплой на сервер через SSH
       - name: Deploy to server
         uses: appleboy/ssh-action@v0.1.6
         with:
@@ -50,9 +50,11 @@ jobs:
           port: 22
           script: |
             cd /root/devstack
-            # Логинимся в GHCR на сервере через переданные секреты
-            echo $GHCR_PAT | docker login ghcr.io -u $GHCR_USERNAME --password-stdin
+            # Правильный login в GHCR на сервере через переданные секреты
+            echo "${GHCR_PAT}" | docker login ghcr.io -u "${GHCR_USERNAME}" --password-stdin
+            # Подтягиваем свежий образ фронта
             docker-compose pull frontend
+            # Запускаем контейнер
             docker-compose up -d frontend
         env:
           GHCR_PAT: ${{ secrets.GHCR_PAT }}
