--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,20 +4,18 @@ services:
   frontend:
     image: ghcr.io/marchitecht/frontend:latest
     restart: always
-
-  # backend:
-  #   image: ghcr.io/your-org/backend:latest
-  #   restart: always
-  #   environment:
-  #     - DATABASE_URL=postgres://user:pass@db:5432/app
+    volumes:
+      - frontend_data:/usr/share/nginx/html
 
   nginx:
     image: nginx:stable
     restart: always
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - frontend
-      # - backend
     ports:
       - "80:80"
+    volumes:
+      - frontend_data:/usr/share/nginx/html:ro
+    depends_on:
+      - frontend
+
+volumes:
+  frontend_data:
