--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,20 @@
-events {}
+worker_processes 1;
+
+events {
+    worker_connections 1024;
+}
 
 http {
-    upstream frontend_app {
-        server frontend:80;
-    }
-
     server {
         listen 80;
 
+        server_name _;
+
+        root /usr/share/nginx/html;
+        index index.html;
+
         location / {
-            proxy_pass http://frontend_app;
+            try_files $uri /index.html;
         }
     }
 }
